Fixed spacing of warning box
The warning box abutted both the site password field and the More button.  A bit of space looks better.

--- a/src/ssp.css
+++ b/src/ssp.css
@@ -30,6 +30,7 @@ h1 {
         border : 3pt solid red;
         background-color : white;
         padding : 1em;
+        margin: 1em;
 }
 .warningbutton {
     width: 100%
